--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<div>Hello</div>
+<div id="braveengine-demo"></div>
 
-<%= javascript_pack_tag "braveengine" %>
+<%= javascript_pack_tag "gameDemo" %>
